--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mitmproxy (0.9.1-0) sid; urgency=low
+
+  * Package current version.
+
+ -- Matthias Urlichs <matthias@urlichs.de>  Thu, 20 Jun 2013 12:49:15 +0200
+
 mitmproxy (0.8-2) unstable; urgency=low
 
   * Added missing dependency on python-lxml (Closes: #687056)
