--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mitmproxy (0.9.1-0.2) smurf; urgency=low
+
+  * Fixed distribution
+
+ -- Matthias Urlichs <matthias@urlichs.de>  Thu, 20 Jun 2013 22:12:43 +0200
+
 mitmproxy (0.9.1-0.1) sid; urgency=low
 
   * gitignore Debian packaging intermediates
